# microstructure_surprise_metrics

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
docs/: lee_mykland_thread_mapping.html  lee_mykland_thread_mapping.md
include/: cuda_kernels.cuh  polygon_parser.h  simd_ops.h  surprise_metrics.h  ttt
python/: CMakeCache.txt  bindings.cpp
src/: cuda_kernels.cu  main.cpp  multi_gpu.cpp  simd_ops.cpp  surprise_metrics.cpp  surprise_metrics.cpp.backup  surprise_metrics.cpp.broken
tmp/microstructure_surprise_metrics/: .gitignore  BUILD_INSTRUCTIONS.md  docker-compose.yml  requirements.txt  setup.py  setup.sh  setup_pybind11.sh  temp_test.cpp
tmp/microstructure_surprise_metrics/include/: cuda_kernels.cuh  multi_gpu.h
tmp/microstructure_surprise_metrics/python/: api.py
tmp/microstructure_surprise_metrics/src/: cuda_kernels.cu  cuda_kernels.cu.backup  main.cpp  main.cpp.backup  polygon_parser.cpp  simd_ops.cpp  surprise_metrics.cpp
